# mnet

./: README.md  build.py  build.sbt  buildimpl.py  buildutil.py
mnet-api/: build.sbt
mnet-api/src/main/model/: project.xml  se.culvertsoft.mnet.lowlevel.xml  se.culvertsoft.mnet.xml
mnet-api/src/main/scala/se/culvertsoft/mnet/api/: BackEnd.scala  ConfigureSocket.scala  Connection.scala  ConnectionConsolidator.scala  ConnectionStatus.scala  MNetException.scala  MTCommandQue.scala  Node.scala  ReconnectingWebsocket.scala  Route.scala
mnet-backend/: build.sbt
mnet-backend/src/main/model/: project.xml  se.culvertsoft.mnet.backend.xml
mnet-backend/src/main/scala/se/culvertsoft/mnet/backend/: BackEnd.scala  BackendException.scala  Client.scala  Connection.scala  ConnectionHandler.scala  InboundNode.scala  InboundNodeConnection.scala  ListeningIfc.scala  Main.scala  MkId.scala  Node.scala  NodeCallbackIfc.scala  NodeConnection.scala  NodeConnectionHandler.scala  NodeIfc.scala  OutboundNode.scala  OutboundNodeConnection.scala  Route.scala  RouteProvider.scala  Serializer.scala  Server.scala  Source.scala  WebSockBackEnd.scala  WebSockProvider.scala  WebsockInHandler.scala  WebsockOutHandler.scala  WebsockSerializer.scala
mnet-backend/src/test/scala/se/culvertsoft/mnet/: BasicTests.scala  CanAnnounce.scala  CanClose.scala  CanConnect.scala  CanSendMessage.scala  CheckLatency.scala  PortMaker.scala  RoutingTests.scala  TestBackend.scala  TestUtils.scala
mnet-cppclient/src/: CMakeLists.txt  ReconnectingWebSocket.h  WebSocket.h  WebSocketClient.h  WebSocketThread.h  main.cpp
mnet-cppclient/src/main/cpp/: InstanceOf.h  MNetClient.h  MNetSerializer.h  ReconnectingWebSocket.h  Route.h  WebSocket.h  main.cpp  test_main.cpp
mnet-cppclient/src/main/cpp/mnet/: MNetClient.h  MNetSerializer.h  Route.h
mnet-cppclient/src/main/cpp_generated/se/culvertsoft/mnet/: ClassRegistry.cpp  ClassRegistry.h  DataMessage.cpp  DataMessage.h  Dispatcher.cpp  Dispatcher.h  ErrorMessage.cpp  ErrorMessage.h  ForwardDeclare.h  Handler.cpp  Handler.h  IdCreateReply.cpp  IdCreateReply.h  IdCreateRequest.cpp  IdCreateRequest.h  Message.cpp  Message.h  MessageFilter.cpp  MessageFilter.h  NodeAnnouncement.cpp  NodeAnnouncement.h  NodeDisconnect.cpp  NodeDisconnect.h  NodeSettings.cpp  NodeSettings.h  NodeUUID.cpp  NodeUUID.h
mnet-cppclient/src/main/cpp_generated/se/culvertsoft/mnet/cppclient/: ClientConfiguration.cpp  ClientConfiguration.h
mnet-cppclient/src/main/model/: project.xml  se.culvertsoft.mnet.cppclient.xml
mnet-cppclient/src/test/cfg/: connect_settings.json
mnet-cppclient/src/test/cpp/: CMakeLists.txt  File2Vector.h  test_main.cpp
mnet-javaclient/: build.sbt
mnet-javaclient/src/main/scala/se/culvertsoft/mnet/client/: MNetClient.scala  MNetClientNode.scala
project/: plugins.sbt
(+6 files in other folders)
